# secure-sending-system

./: .gitignore  Dockerfile  README.md  nginx.conf  pyproject.toml  run-client.sh  run-clientw.ps1  run-docker.sh
client/: Ciphrer.py  DTOs.py  KeyManager.py  app.py  pyproject.toml  run_client.sh
client/templates/: base.html  index.html  login.html  menu.html  message_view.html  messenger.html  qr_code.html  register.html  totp.html
server/: .env.example  Ciphrer.py  DTOs.py  DbController.py  JWT_manager.py  app.py  pyproject.toml
server/services/: MessageService.py  UserService.py
shared/: Ciphrer.py  DTOs.py  TOTP_manager.py  utils.py
