[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "flask>=3.1.2",
    "flask-limiter>=4.1.1",
    "gunicorn>=23.0.0",
    "pycryptodome>=3.23.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qrcode>=8.2",
]
